[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.25
custom_fonts/font = ExtResource( 1 )
text = "Wonder Assist"
align = 1
valign = 1

[node name="VBoxWonders" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_top = 0.25
anchor_right = 0.49
anchor_bottom = 0.75
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxWonders"]
margin_top = 214.0
margin_right = 486.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
text = "Wonders"
align = 1
valign = 1

[node name="ButtonSimulator" type="Button" parent="VBoxWonders"]
margin_top = 318.0
margin_right = 486.0
margin_bottom = 396.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Simulator"

[node name="ButtonInspector" type="Button" parent="VBoxWonders"]
margin_top = 428.0
margin_right = 486.0
margin_bottom = 506.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Inspector"

[node name="VBoxFocusCards" type="VBoxContainer" parent="."]
anchor_left = 0.51
anchor_top = 0.25
anchor_right = 0.7
anchor_bottom = 0.75
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxFocusCards"]
margin_top = 214.0
margin_right = 486.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
text = "Focus Cards"
align = 1
valign = 1

[node name="ButtonSimulator" type="Button" parent="VBoxFocusCards"]
margin_top = 318.0
margin_right = 486.0
margin_bottom = 396.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Simulator"

[node name="ButtonInspector" type="Button" parent="VBoxFocusCards"]
margin_top = 428.0
margin_right = 486.0
margin_bottom = 506.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Inspector"

[connection signal="pressed" from="VBoxWonders/ButtonSimulator" to="." method="_on_ButtonSimulator_pressed"]
[connection signal="pressed" from="VBoxWonders/ButtonInspector" to="." method="_on_ButtonInspector_pressed"]
[connection signal="pressed" from="VBoxFocusCards/ButtonInspector" to="." method="_on_FocusCardInspector_pressed"]
